src/main/default/objects/CartTax/fields/DR_Duty__c.field-meta.xml
<CustomField>
    <fullName>DR_Duty__c</fullName>
    <description>Indicates the amount of duty levied by the importing country for this Line Item.</description>
    <inlineHelpText>Indicates the amount of duty levied by the importing country for this Line Item.</inlineHelpText>
    <label>DR Duty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>